👻🚒 Checkpoint ./script.js:311760/307 ./index.html:311760/52 ./style.css:311760/108

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div id="qr-code"></div>
 
       <p id="name">
-        Phạm Huy Hoàng
+        Phạm Huy Hoàng&nbsp; <span class="hack">_</span>
       </p>
     </div>
 
