🍈🗽 Checkpoint ./style.css:311760/234 ./.glitch-assets:311760/803 ./index.html:311760/396

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <div id="card">
       <img
-        src="https://cdn.glitch.com/d08bb326-e251-4744-9266-f454d653c7c1%2Flogo_transparent.png?v=1624363635382"
+        src="https://cdn.glitch.com/d08bb326-e251-4744-9266-f454d653c7c1%2Fwhite-logo.png?v=1624366965601"
         id="logo"
       />
 
