--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
   </head>
   <body>
     <div id="app">
-      <div id="card">
+      <div id="card" v-bind:style="{ 'background-image': 'url(' + background + ')' }">
         <img
           src="https://cdn.glitch.com/d08bb326-e251-4744-9266-f454d653c7c1%2Fwhite-logo.png?v=1624366965601"
           id="logo"
         />
 
         <div id="qr-code"></div>
-
+        
         <p id="name">
           <span id="name-content">{{name}}</span>
           <span class="hack">_</span>
@@ -34,7 +34,7 @@
         <input v-model="url" placeholder="URL" id="url" />
 
         <div id="background-select">
-            <img v-bind:src="bg" v-for="bg in backgrounds" />
+            <img v-bind:src="bg" v-for="bg in backgrounds" v-on:click="setBackground(bg)" />
         </div>
         
         <div>
