💰🚎 Checkpoint ./.glitch-assets:311760/357 ./index.html:311760/270

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
+<link rel="shortcut icon" type="image/jpg" href="https://cdn.glitch.com/d08bb326-e251-4744-9266-f454d653c7c1%2Ffavicon.png?v=1624373448629"/>
     <!-- Import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css" />
+    <title>Tao Táp - Gặp ai cũng Táp</title>
   </head>
   <body>
     <div id="app">
