--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <body>
     <div id="app">
       <div id="card" v-bind:style="{ 'background-image': 'url(' + background + ')' }">
+        <div id="overlay"></div>
         <img
           src="https://cdn.glitch.com/d08bb326-e251-4744-9266-f454d653c7c1%2Fwhite-logo.png?v=1624366965601"
           id="logo"
