🏊🏼💴 Checkpoint ./style.css:311760/73 ./index.html:311760/7807

--- a/index.html
+++ b/index.html
@@ -81,10 +81,11 @@
           <button v-on:click="exportPDF">
             Tạo thẻ (PDF)
           </button>
-          
+
           <p>
-            Nếu xuất file ảnh, các bạn in màu với <b>độ phân giải 300dpi</b> sẽ được ảnh <b>tầm 8.7cm x 5.5cm</b>. <br/> 
-            Nếu xuất file PDF thì đem đi màu A4 là ok. <br/>
+            Nếu xuất file ảnh, các bạn in màu với <b>độ phân giải 300dpi</b> sẽ
+            được ảnh <b>tầm 8.7cm x 5.5cm</b>. <br />
+            Nếu xuất file PDF thì đem đi màu A4 là ok. <br />
             Dán ảnh này lên thẻ NFC trắng <b>(8.55cm X 5.4cm)</b> là được nhé!
           </p>
         </div>
