📯⚽️ Checkpoint ./script.js:311760/68 ./index.html:311760/215

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
 
         <div>
-          <h5>2. QR Code (Dùng linktree hoặc instabio hoặc web tự code)</h5>
+          <h5>2. QR Code (Dùng <a href="https://linktr.ee" target="_blank">linktree</a> hoặc <a href="https://instabio.cc" target="_blank">instabio</a> hoặc web tự code)</h5>
           <div>
             <input v-model="url" placeholder="URL" id="url" />
             <button v-on:click="updateQR(-10)">
@@ -113,7 +113,7 @@
           <p>
             Nếu xuất file ảnh, các bạn in màu với <b>độ phân giải 300dpi</b> sẽ
             được ảnh <b>tầm 8.7cm x 5.5cm</b>. <br />
-            Nếu xuất file PDF thì đem đi màu A4 là ok. <br />
+            Nếu xuất file PDF thì đem đi màu A4, chọn <b>Fit to Paper</b> khi in là ok. <br />
             Dán ảnh này lên thẻ NFC trắng <b>(8.55cm X 5.4cm)</b> là được nhé!
           </p>
         </div>
